[tool.poetry]
name = "dsa-practice"
version = "0.1.0"
description = ""
authors = ["JB-Tellez <jb.tellez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
pytest-watch = "^4.2.0"
codefellows = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
